[package]
name = "http-proxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.6.0", features = ["rustls"] }
pingora-core = "0.6.0"
pingora-proxy = "0.6.0"
pingora-http = "0.6.0"
pingora-cache = "0.6.0"
pingora-lru = "0.6.0"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
url = "2.5"
regex = "1.11"
async-trait = "0.1"
http = "1.3"
bytes = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
pingora-memory-cache = "0.6.0"
once_cell = "1.21.3"
pingora-error = "0.6.0"

[profile.release]
# lto = true
# codegen-units = 1
panic = "abort"
strip = true
